fix: update VideoPlayer component for improved styling and functionality; adjust CSS for better visibility and user experience

--- a/src/index.css
+++ b/src/index.css
@@ -98,7 +98,7 @@ img {
   pointer-events: none;
 }
 
-/* .video-poster img {
+.video-poster img {
   border-radius: 10px !important;
   background-color: var(--background) !important;
   aspect-ratio: 16 / 9 !important;
@@ -113,10 +113,4 @@ img {
   height: 100% !important;
   width: 100%;
   object-fit: contain !important;
-} */
-
-.shaka-bottom-controls {
-  color: var(--accent-foreground);
-  display: flex;
-  flex-direction: column-reverse;
-  }
+}
